tests/build/cases/widget/malformed_property_type1.stderr
error: unexpected end of input, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
 --> cases/widget/malformed_property_type1.rs:8:17
  |
8 |         pub foo() = 10;
  |                 ^
